<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="um_title">VIOMI Smart Instant Heating Water Dispenser (MINI)</string>
    <string name="um_default">--</string>
    <string name="um_setting_success">success to set up</string>
    <string name="um_setting_fail">fail to set up</string>
    <string name="um_device_offline">device not connected</string>
    <string name="um_device_network_unavailable">Failed to get data, please check the network connection</string>
    <string name="um_min_temp">40</string>
    <string name="um_max_temp">90</string>
    <string name="um_over_time">over %1$d hour</string>
    <string name="um_over">over</string>
    <string name="um_hour">hour</string>
    <string name="um_water_temp_setting">Warm water</string>
    <string name="um_water_tds">TDS</string>
    <string name="um_water_tds_unit">ppm</string>
    <string name="um_hour_unit">hour</string>
    <string name="um_temp_default">--</string>
    <string name="um_temp_unit">℃</string>
    <string name="um_day_unit">day</string>
    <string name="um_water_temp">water temp.</string>
    <string name="um_water_temp_normal">water temp.</string>
    <string name="um_water_temp_warm">water temp.</string>
    <string name="um_water_temp_hot">water temp.</string>
    <string name="um_water_tds_low">Warm tip: Lower TDS , fewer impurities in water.</string>
    <string name="um_water_tds_high">Warm tip: There is lot of impurity please change the water in time.</string>
    <string name="um_stored_remind">Storage time</string>
    <string name="um_stored_remind_tip_low">water is fresh and remember to share frequently~</string>
    <string name="um_stored_remind_tip">you have kept the water for %1$d hours and need to drink in time</string>
    <string name="um_stored_remind_middle">the existing water is still available for drinking while change to fresh water is more healthy for the body</string>
    <string name="um_stored_remind_high">Suggest to change to fresh water when the existing for a long time~</string>
    <string name="um_wash_remind">Cleaning reminder</string>
    <string name="um_wash_remind_low">no need to clean currently and pls keep it~</string>
    <string name="um_wash_remind_high">Pls use citric acid to clean as you have 60 days without cleaning</string>
    <string name="um_drink_remind_title">water drinking reminder</string>
    <string name="um_whether_to_open">whether to turn on</string>
    <string name="um_remind_time">time duration reminder</string>
    <string name="um_reminder">Warm tip</string>
    <string name="um_drink_remind_tip_chose">Time choosing</string>
    <string name="um_remind_more_than_1_hours">over 1 hour</string>
    <string name="um_remind_more_than_2_hours">over 2 hour</string>
    <string name="um_remind_more_than_3_hours">over 3 hour</string>
    <string name="um_remind_more_than_4_hours">over 4 hour</string>
    <string name="um_remind_more_than_6_hours">over 6 hour</string>
    <string name="um_remind_more_than_8_hours">over 8 hour</string>
    <string name="um_remind_more_than_10_hours">over 10 hour</string>
    <string name="um_remind_more_than_12_hours">over 12 hour</string>
    <string name="um_wash_flash_tip">cleaning…</string>
    <string name="um_error_list_title">Problem solving</string>
    <string name="um_error_more">%1$d problems choosing</string>
    <string name="um_device_error21">heating error</string>
    <string name="um_device_error22">water inlet NTC error</string>
    <string name="um_device_error23">heating NTC error</string>
    <string name="um_device_error24">dry-burning error</string>
    <string name="um_device_error21_one">No 1, Pls check whether choose heating or boiling button;</string>
    <string name="um_device_error21_two">No 2, Remove the plug and reconnect the power ;</string>
    <string name="um_device_error21_three">No 3, If the fault is still existed after following the above procedures pls call VIOMI service center call 400–100–2632 and the professional guy will help you to solve the problem.</string>
    <string name="um_device_error22_one">No 1, Check whether there is water in the tank and then press “water outlet button” for seconds to make the inlet water NTC completely touched with water;</string>
    <string name="um_device_error22_two">No 2, Pls check whether it’s because of the low water temperature to make freezing and pls put out the freezing water and make sure the room temperature is above 5° and use it after two hours which can make inlet water NTC completely touched with the water;</string>
    <string name="um_device_error22_three">No 3, If the fault is still existed after following the above procedures pls call VIOMI service center call 400–100–2632 and the professional guy will help you to solve the problem.</string>
    <string name="um_device_error23_one">No 1, Pls check whether it’s because of the low water temperature to make freezing and pls put out the freezing water and make sure the room temperature is above 5° and use it after two hours which can make inlet water NTC completely touched with the water;</string>
    <string name="um_device_error23_two">No 2, If the fault is still existed after following the above procedures pls call VIOMI service center call 400–100–2632 and the professional guy will help you to solve the problem.</string>
    <string name="um_device_error24_one">No 1, Pls check whether it’s because of the low water temperature to make freezing and pls put out the freezing water and make sure the room temperature is above 5° and use it after two hours which can make inlet water NTC completely touched with the water;</string>
    <string name="um_device_error24_two">No 2, If the fault is still existed after following the above procedures pls call VIOMI service center call 400–100–2632 and the professional guy will help you to solve the problem.</string>
    <string name="um_temp_tip_40">suitable for probiotics</string>
    <string name="um_temp_tip_50">suitable for milk</string>
    <string name="um_temp_tip_60">suitable for honey</string>
    <string name="um_temp_tip_75">suitable for Longjing</string>
    <string name="um_temp_tip_80">suitable for Green Tea</string>
    <string name="um_temp_tip_85">suitable for coffee</string>
    <string name="um_temp_tip_90">suitable for Tie Guanyin</string>
    <string name="um_min_temp_tip">The higher water temperature in the tank means the lowest adjustable temperature is higher.</string>
    <string name="um_error_value">error</string>
</resources>