<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/parent_layout">

    <LinearLayout style="@style/second_parent_layout">

        <TextView
            style="@style/text_desc"
            android:text="@string/um_water_tds" />

        <TextView
            android:id="@+id/water_tds_tip"
            style="@style/text_tip"
            android:text="@string/um_water_tds_low"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/water_tds_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/um_default"
            android:textColor="@color/color_um_green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/water_tds_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/um_water_tds_unit"
            android:textColor="@color/color_um_green"
            android:textSize="@dimen/font_size_14sp" />
    </LinearLayout>
</LinearLayout>