<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/parent_layout">

    <LinearLayout style="@style/second_parent_layout">

        <TextView
            style="@style/text_desc"
            android:text="@string/um_stored_remind" />

        <TextView
            android:id="@+id/stored_remind_tip"
            style="@style/text_tip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stored_remind_value"
            style="@style/text_value"
            android:text="@string/um_default" />

        <TextView
            android:id="@+id/stored_remind_unit"
            style="@style/text_unit"
            android:text="@string/um_hour_unit" />
    </LinearLayout>
</LinearLayout>