<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/um_water_temp_setting"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/temp_setting_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:textColor="@color/color_orange"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/temp_setting_temp_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/font_size_14sp" />
    </LinearLayout>

    <!--最低设置温度提示-->
    <TextView
        android:id="@+id/temp_setting_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:text="@string/um_min_temp_tip"
        android:textColor="@color/color_black_80"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <!--最低设置温度-->
        <TextView
            android:id="@+id/temp_setting_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/icon_temp_min_setting"
            android:text="@string/um_min_temp"
            android:textColor="@color/color_text_gray"
            android:textSize="@dimen/font_size_14sp" />

        <SeekBar
            android:id="@+id/temp_setting_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/temp_setting_min"
            android:layout_toLeftOf="@+id/temp_setting_max"
            android:layout_toRightOf="@+id/temp_setting_min"
            android:layout_toStartOf="@+id/temp_setting_max"
            android:max="50"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/um_seekbar_progress"
            android:thumb="@drawable/um_seekbar_thumb" />

        <!--最高设置温度-->
        <TextView
            android:id="@+id/temp_setting_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/icon_temp_max_setting"
            android:text="@string/um_max_temp"
            android:textColor="@color/color_text_gray"
            android:textSize="@dimen/font_size_14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line_gray" />
</LinearLayout>