<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/um_background_low"
    android:orientation="vertical"
    tools:context=".activity.UMMainScreenActivity">

    <!--Title Bar-->
    <FrameLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/title_bar_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@null"
            android:paddingLeft="@dimen/std_titlebar_margin_left_right"
            android:paddingRight="@dimen/std_titlebar_margin_left_right"
            android:scaleType="center"
            android:src="@drawable/std_tittlebar_main_device_back_white" />

        <TextView
            android:id="@+id/title_bar_title"
            style="@style/std_word_001_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/titlebar_return_area_size"
            android:layout_marginRight="@dimen/titlebar_return_area_size"
            android:ellipsize="end"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/title_bar_red_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginEnd="@dimen/std_titlebar_redpoint_margin_right"
            android:layout_marginRight="@dimen/std_titlebar_redpoint_margin_right"
            android:layout_marginTop="@dimen/std_titlebar_redpoint_margin_top"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/std_tittlebar_main_device_massage_point"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/title_bar_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@null"
            android:paddingLeft="@dimen/std_titlebar_margin_left_right"
            android:paddingRight="@dimen/std_titlebar_margin_left_right"
            android:scaleType="center"
            android:src="@drawable/std_tittlebar_main_device_more_white" />

        <ImageView
            android:id="@+id/title_bar_share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:contentDescription="@null"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/std_titlebar_margin_left_right"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/std_titlebar_margin_left_right"
            android:scaleType="center"
            android:src="@drawable/std_tittlebar_main_device_share_white" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--这块内容什么意思？-->
                <com.yunmi.heatkettle.view.UMWaterTempView
                    android:id="@+id/water_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="20dp" />

                <RelativeLayout
                    android:id="@+id/water_temp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/water_temp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/um_default"
                        android:textColor="@android:color/white"
                        android:textSize="70sp" />

                    <TextView
                        android:id="@+id/water_temp_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/water_temp_text"
                        android:layout_toRightOf="@id/water_temp_text"
                        android:paddingTop="16dp"
                        android:text="@string/um_temp_unit"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/water_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/water_temp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="64dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="0dp"
                    android:paddingStart="6dp"
                    android:text="@string/um_water_temp"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/remind_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/water_temp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/um_drink_remind_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_bg_gray"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/error_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_bg_red"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/color_text_red"
                    android:textSize="@dimen/font_size_13sp"
                    android:visibility="gone" />

                <include layout="@layout/um_water_temp_setting" />

                <include layout="@layout/um_common_divide_line" />

                <include layout="@layout/um_water_tds_layout" />

                <include layout="@layout/um_common_divide_line" />

                <include layout="@layout/um_stored_remind_layout" />

                <include
                    layout="@layout/um_common_divide_line"
                    android:visibility="gone" />

                <include
                    layout="@layout/um_wash_remind_layout"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>